[package]
name = "mem"
version = "0.1.0"
edition = "2021"
authors = ["Adrien Wald <hello@mrlowlevel.com>"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
dirs = "5.0.1"
ndarray = { version = "0.15.6", features = ["serde"] }
openai-api-rs = "2.0.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
